# dags-docker-template

./: Dockerfile  README.md  pyproject.toml
entrypoint/: app.py  app_util.py
src/utils/: xcoms.py
